Fixed lot of color contrast issues by changing general body color #26

--- a/themes/loconomics/assets/css/_theme.scss
+++ b/themes/loconomics/assets/css/_theme.scss
@@ -19,7 +19,7 @@ $font-family-sans-serif: 'Nunito Sans', Arial, Helvetica, sans-serif;
 $primary: $logo-color;
 $secondary: #c44d52;
 $headings-color: black;
-$body-color: rgb(147, 147, 147);
+$body-color: rgb(109, 109, 109);
 // overwrite light (=$gray-100) with a similar from the design
 $gray-100: rgb(244, 244, 246);
 // Required Bootstrap base files (don't produce output)
